<resources>
    <string name="app_name">JustSearch</string>
    <string name="hosptial">Hospitals</string>
    <string name="coll">Colleges</string>
    <string name="rest">Restaurants</string>
    <string name="sch">Schools</string>
    <string name="atm">Atms</string>
    <string name="emm">Empolyment Office</string>
    <string name="get_your_location">Get your Location</string>
    <string name="_201">20</string>
    <string name="search">search</string>
    <string name="action_search">search</string>
    <string-array name="collegs">
     <item>
        "\tKamaraj College of Engineering and Technology\n"
        "\t\tS.P.G.Chidambara Nadar-C.Nagammal Campus,\n"
        "\t\tS.P.G.C.Nagar,\n"
        "\t\tPost Box No. 12,\n"
        "\t\tVirudhunagar - 626 001."

    </item>
    <item>
        "\tV.V.Vanniaperumal College for Women,\n"
        "\t\tVirudhunagar - 626001"

    </item>
    <item>
        "\tVirudhunagar Hindu's SethilKumara Nadar college,\n"
        "\t\t3/151-1,College Road,Virudhunagar-626001."

    </item>
    <item>
      "\tMepco Nagar, Mepco Engineering College Post,\n"
"\t\tSivakasi,\n"
"\t\tVirudhunagar,\n"
"\t\tTamil Nadu 626005."
    </item>
    <item>
"\t Sri Kaliswari College,\n"
"\t\tSivakasi,\n"
"\t\tVirudhunagar Main Road,\n"
\t\tSivakasi - 626123, Tamilnadu."

    </item>
<item>
    "\t\tAyya Nadar Janaki Ammal College,\n"
    "\t\tSivakasi,\n"
    "\t\tSrivilliputhur Main Road,\n"
    "\t\tSivakasi - 626123, Tamilnadu."
</item>   
        <item>    PSR Engineering College - Sivakasi\n
    Sevalpatti, Virudhunagar Dist., Sivakasi, Tamil Nadu 626140\n
    04562 239 091</item>
<item>
    Sri Vidya College of Engineering &amp; Technology,Virudhunagar\n

    Sivakasi Main Road, Virudhunagar, Tamil Nadu 626005\n
    Phone :04562 267 467
</item>
<item>
    AAA Engineering College,Sivakasi.\n
    Kamarajar Educational Road, Amathur (V),Sivakasi, Tamil Nadu 626123\n
    Phone :04562 251 112
</item>
    <item>
    SFR College of Arts and Science for women,Sivakasi\n
    Pallapatti to Sivakasi Rd, Kamarajapuram Colony, Sivakasi, Tamil Nadu 626123\n
    Phone :04562 220 389
</item>
    <item>    Renganayagi Varatharaj College of Engineering,Sivakasi\n
    Salvarpatti, Thayilpatti, Sivakasi, Virudhunagar, Tamil Nadu 626128\n
    Phone :04562 234 567
</item>
        <item>"\tAG polytechnique college\n"
"\t\t6/584/a1,Lakshmi nagar,Virudhunagar,Tamil Nadu 626001" </item>

    </string-array>
    <string-array name="collegsName">
        <item>
        "Kamaraj College of Engineering and Technology,Virudhunagar"

    </item>
    <item>
        "V.V.Vanniaperumal College for Women,Virudhunagar"

    </item>
    <item>
        "Virudhunagar Hindu's SethilKumara Nadar college,Virudhunagar"

    </item>
    <item>
      "Mepco Engineering College Post,Sivakasi"
    </item>
    <item>
"\t Sri Kaliswari College,Sivakasi"
    </item>
<item>
    "Ayya Nadar Janaki Ammal College,Sivakasi"

</item>
        <item>    PSR Engineering College - Sivakasi
    </item>
<item>
    Sri Vidya College of Engineering  Technology,Virudhunagar.
</item>
<item>
    AAA Engineering College,Sivakasi.

</item>
    <item>
    SFR College of Arts and Science for women,Sivakasi

</item>
    <item>    Renganayagi Varatharaj College of Engineering,Sivakasi

</item>
        <item>"AG polytechnique college,Virudhunagar" </item>

    </string-array>
    <string-array name="schools">
     <item>Jaycees Matriculation Hr. Sec. School
Gnanagiri Road\n
Sivakasi - 626 189\n
Phone : +91 4562 224202\n
Website: www.sivakasijayceesschool.com</item>
    <item>
A.P.Kaliappa Nadar Middle School,\n
Hussain Colony,
Sivakasi.\n
Phone : +91 4562 278939</item>
    <item>
ANUA Municipal Hr Sec School
Sivakasi\n
Phone : +91 4562 275132</item>
<item>
    AVM Marimuthu Nadar Hr.Sec.School
Vilampatti
Sivakasi - 626124\n
Phone : +91 4562 221526</item>
<item>
    AVT High School
Sivakasi\n
Phone : +91 4562 274587</item>
<item>CMS Girls Hr.Sec.School
Sivakasi\n
Phone : +91 4562 220384</item>
<item>
    Coronation Girls High School
Sivakasi\n
Phone : +91 4562 221664</item>
<item>
    Kalaimagal Hr.Sec.School
Sivakasi\n
Phone : +91 4562 230676</item>
<item>
    Kamarajar Eng Medium School
Sivakasi\n
Phone : +91 4562 225175</item>
<item>Lion Melwin Jones Primary &amp; Nursery
Satchiyapuram,
Sivakasi.\n
Phone : +91 4562 222095</item>
<item>
    Municipal High School
Sivakasi\n
Phone : +91 4562 278587</item>
<item>
    Muslim Hr Sec School
Sivakasi\n
Phone : +91 4562 223785</item>
<item>
    NPSS Rotary Matric High School
Viswanatham,
Sivakasi.\n
Phone : +91 4562 278191</item>
<item>Senbaga Vinayagar Matriculation School,
Sivakasi.\n
Phone : +91 4562 276627</item>
<item>SHN Girls High School
Sivakasi\n
Phone : +91 4562 220154</item>
    <item>
SHNV Hr Sec School
Sivakasi
</item>
<item>
    KVS Matriculation Higher Secondary School
Virudhunagar,\n Pin Code-626003\n
Phone :04562 252 717 </item>
<item>P.S.Chidambara Nadar Senior English School\n
GT Nagar, Virudhunagar, Tamil Nadu 626001\n
Phone :04562 245 327 </item>
<item>Kshatriya Vidya Sala Middle School\n
4,Katchery Road,, Virudhunagar, Tamil Nadu 626001\n
Phone :04562 243 060</item>
<item>Kendriya Vidyalaya, Virudhunagar\n
Anna Nagar, Virudhunagar, Tamil Nadu 626001\n
Phone :04562 280 028</item>
    <item>
RJ Mantra English School\n
Virudhunagar, Tamil Nadu 626002\n
Phone :094869 47789 </item>
    <item>
KVS Centenary School\n
75A, Centenary Building, Ramamoorthy Rd, Virudhunagar, Tamil Nadu 626001\n
Phone :04562 244 060</item>
    <item>
Kshatriya Girls Middle School\n
Sivagami Puram, Virudhunagar, Tamil Nadu 626001\n

</item>
<item>
    Kalaimagal
Thiruthangal, Sivakasi, Tamil Nadu 626130
</item>
    <item>
Yrtv School\n
Vadamalapuram, Thiruthangal, Sivakasi, Tamil Nadu 626130\n
Phone :04562 221 004
        </item>
    <item>
AAA INTERNATIONAL SCHOOL (CBSE)\n
Thiruthangal, Sivakasi, Tamil Nadu 626130\n
Phone :04562 201 882</item>
    <item>
KMKA Matriculation School\n
Thiruthangal, Sivakasi, Tamil Nadu 626130\n
</item>
    <item>
S.R.N. Govt Hr. Sec. School\n
Srivilliputhur-Sivakasi-Virudhunagar-Aruppukottai-Tiruchuli-Narikudi-Parthibanoor Rd, Thiruthangal, Sivakasi, Tamil Nadu 626130\n
</item>
    <item>
KMKA Matric Higher Secondary School\n
Vadamalapuram, Thiruthangal, Sivakasi, Tamil Nadu 626130
</item>
<item>
    Muthumari Matric Higher Secondary School\n
Vadamalapuram, Thiruthangal, Sivakasi, Tamil Nadu 626130
</item>
    <item>VSKD School\n
    SH 187,Prarasakthi Colony ,Sivakasi,Tamil Nadu 626189</item>
    </string-array>
    <string-array name="schoolsName">
         <item>Jaycees Matriculation Hr. Sec. School,
Sivakasi
</item>
    <item>
A.P.Kaliappa Nadar Middle School,Sivakasi.
</item>
    <item>
ANUA Municipal Hr Sec School,
Sivakasi
</item>
<item>
    AVM Marimuthu Nadar Hr.Sec.School,Sivakasi.
</item>
<item>
    AVT High School
Sivakasi</item>
<item>CMS Girls Hr.Sec.School,
Sivakasi
</item>
<item>
    Coronation Girls High School
,Sivakasi
</item>
<item>
    Kalaimagal Hr.Sec.School
,Sivakasi
</item>
<item>
    Kamarajar Eng Medium School
,Sivakasi
</item>
<item>Lion Melwin Jones Primary Nursery School,
Sivakasi.
</item>
<item>
    Municipal High School,
Sivakasi
</item>
<item>
    Muslim Hr Sec School,
Sivakasi
</item>
<item>
    NPSS Rotary Matric High School,Sivakasi.
</item>
<item>Senbaga Vinayagar Matriculation School,
Sivakasi.
P</item>
<item>SHN Girls High School,
Sivakasi
</item>
    <item>
SHNV Hr Sec School,
Sivakasi
</item>
<item>
    KVS Matriculation Higher Secondary School,
Virudhunagar. </item>
<item>P.S.Chidambara Nadar Senior English School, Virudhunagar
 </item>
        <item>Kshatriya Vidya Sala Middle School, Virudhunagar</item>
<item>Kendriya Vidyalaya, Virudhunagar
</item>
    <item>
RJ Mantra English School,
Virudhunagar </item>
    <item>
KVS Centenary School,Virudhunagar
</item>
    <item>
Kshatriya Girls Middle School,Virudhunagar

</item>
<item>
    Kalaimagal Hr.Sec School,Thiruthangal
</item>
    <item>
Yrtv School, Thiruthangal
        </item>
    <item>
AAA INTERNATIONAL SCHOOL (CBSE),Thiruthangal
</item>
    <item>
KMKA Matriculation School,Thiruthangal
</item>
    <item>
S.R.N. Govt Hr. Sec. School, Thiruthangal
</item>
    <item>
KMKA Matric Higher Secondary School, Thiruthangal
</item>
<item>
    Muthumari Matric Higher Secondary School, Thiruthangal
</item>
        <item>VSKD School,Sivakasi</item>
    </string-array>
</resources>