<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/hospitalButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/hospital"
                        android:paddingRight="10dp" />

                    <TextView
                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/hosptial"
                        android:textIsSelectable="false"

                        />


                    <Button
                        android:id="@+id/collButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/university"
                        android:paddingRight="10dp" />


                    <TextView
                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:text="@string/coll" />

                    <Button
                        android:id="@+id/restrButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/res"
                        android:paddingRight="10dp" />

                    <TextView

                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rest" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/schButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/school"

                        android:paddingRight="10dp" />

                    <TextView
                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/sch" />

                    <Button
                        android:id="@+id/atmButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/atm"
                        android:paddingRight="10dp" />

                    <TextView
                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/atm" />

                    <Button
                        android:id="@+id/eoButton"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/em"
                        android:paddingRight="10dp" />

                    <TextView

                        style="@style/textviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/emm" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/locTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/get_your_location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone"
                 />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_menu_mylocation"
        android:theme="@style/AppTheme" />

</android.support.design.widget.CoordinatorLayout>