<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="6"
                    android:layout_margin="3dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/tHospitalButton"
                        android:layout_weight="2"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/hospital"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hosptial"

                        android:textIsSelectable="false"
                        style="@style/textviews"

                        />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:id="@+id/tCollButton"
                        android:background="@drawable/university"
                        android:layout_weight="2"
                        />




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coll"


                        style="@style/textviews"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/tRestrButton"
                        android:layout_weight="2"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/res"
                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rest"
                        style="@style/textviews"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="6"
                    android:layout_margin="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/tSchButton"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"

                        android:background="@drawable/school"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sch"
                        android:layout_marginRight="10dp"
                        style="@style/textviews"
                        android:layout_marginBottom="5dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_weight="2"
                        android:layout_marginRight="10dp"
                        android:id="@+id/tAtmButton"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/atm"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atm"
                        android:layout_marginRight="10dp"
                        style="@style/textviews"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/tEoButton"
                        android:layout_weight="2"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/em"
                        android:layout_marginRight="10dp"
                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emm"
                        style="@style/textviews"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_your_location"
                android:id="@+id/locTextView"
                android:visibility="gone"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:theme="@style/AppTheme"
        android:src="@drawable/ic_action_name" />

</android.support.design.widget.CoordinatorLayout>